feat: swagger 추가, auths/users 모듈 생성, createUsers 스케치, validation messgae 및 class-validator 관련 내용 추가

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,6 @@
   "service": "office",
   "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
-  "postCreateCommand": "npm install -g pnpm @nestjs/cli typescript tsc",
+  "postCreateCommand": "npm install -g @nestjs/cli",
   "remoteUser": "root"
 }
