--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - run: echo "${{ secrets.NPMRC }}" | base64 --decode > ./.npmrc
       - run: npm install
       - run: npm run build
+      - run: echo "${{ secrets.AWSPEM }}" | base64 --decode > ./dist/global-bundle.pem
 
       - name: 도커 이미지 빌드
         run: docker build -t daeseong0226/office-nest .
