--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,12 @@
 {
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "endOfLine": "auto"
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "spaceBeforeFunctionParen": true,
+  "endOfLine": "lf"
 }
