--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "TZ=Asia/Seoul nest start",
+    "start:dev": "TZ=Asia/Seoul nest start --watch",
+    "start:debug": "TZ=Asia/Seoul nest start --debug --watch",
+    "start:prod": "TZ=Asia/Seoul node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest ./test/**",
+    "test": "TZ=Asia/Seoul jest ./test/**",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles --forceExit"
+    "test:e2e": "TZ=Asia/Seoul jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
