--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "sql-formatter": "^15.2.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "@types/types-sssh": "github:SSSH-fresh-code/types-sssh#v0.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -50,7 +51,6 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@types/types-sssh": "github:SSSH-fresh-code/types-sssh",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
