--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "rxjs": "^7.8.1",
     "sql-formatter": "^15.2.0",
     "typeorm": "^0.3.20",
-    "@types/types-sssh": "github:SSSH-fresh-code/types-sssh#v0.1.0"
+    "@types/types-sssh": "github:SSSH-fresh-code/types-sssh#main"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
