--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@types/types-sssh": "github:SSSH-fresh-code/types-sssh#main",
+    "@types/types-sssh": "github:SSSH-fresh-code/types-sssh",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
