--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "TZ=Asia/Seoul nest start --debug --watch",
     "start:prod": "TZ=Asia/Seoul node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "TZ=Asia/Seoul jest ./test/**",
+    "test": "TZ=Asia/Seoul jest ./src/**",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -42,15 +42,17 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@automock/adapters.nestjs": "^2.1.0",
+    "@automock/jest": "^2.1.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@sssh-fresh-code/types-sssh": "^0.1.5",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@sssh-fresh-code/types-sssh": "0.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
